# fur-pattern-generator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  fur_pattern_generator.py  main.py  operators.py  pyproject.toml  setup.py
.github/workflows/: ci-test.yml  pre-commit.yml  test.yml
cprofile/: cells_develop.py
fpg/: __init__.py
fpg-bpy-addon/: __init__.py  operators.py
fpg-bpy-addon/addon/: __init__.py  helpers.py  operators.py  properties.py
fpg-gui/: __main__.py  window.py  window.ui
fpg/addon/: __init__.py  helpers.py  operators.py
fpg/fpg/: generator.py
fpg/generator/: __init__.py  cells.py  colors.py  generator.py  image.py  neighborhood.py
fpg/gui/: __main__.py
fur_pattern_generator/: __init__.py
fur_pattern_generator/addon/: __init__.py  fur_pattern_generator.py  operators.py  panels.py  properties.py
src/: __init__.py
src/addon/: __init__.py  fur_pattern_generator.py  operators.py  panels.py  properties.py
src/fpg/: __init__.py  generator.py
tests/: test_cells.py  test_fpg.py  test_image.py  test_nstrategy.py
